--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!-- Markup the content below with tags and attributes such that it can be styled in CSS-->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <!-- -->
-  <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap"
-    rel="stylesheet">
-  <!-- Link your CSS stylesheet -->
-  <link rel="stylesheet" href="index.css">
+  <!--link to google fonts-->
+  <title>Let's Camp!</title>
+  <link rel="icon" href="https://image.flaticon.com/icons/svg/2979/2979348.svg" type="image/gif" sizes="16x16">
+  <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+<!-- Link your CSS stylesheet -->
+    <link rel="stylesheet" href="index.css">
 </head>
-
 <body>
   <header>
     <nav>
@@ -20,51 +19,42 @@
   </header>
   <section class="top">
     <div class="left">
-      <img src="assets/header_img.jpg" alt="sunrise over the mountains in Yosemite National Park">
+      <img src="assets/header_img.jpg" alt="sunrise over the mountains in Yosemitenational park">
     </div>
     <div class="right">
       <h1>Yosemite Park Guide</h1>
-      <h2 class="sub">Come explore California’s beautiful wilderness.</h2>
-      <p class="sub">Always open. Reservations are not available or required to enter the park.</p>
+      <h2>Come explore California's beautiful wilderness.</h2>
+      <p>Always open. Reservations are not available or required to enter the park.</p>
+    </div>
+  </section>   
+  <section class="generalInfo">
+    <div>
+      <p>
+        Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+      <p>
+        First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+      </div>
+  </section>
+  <section class="camp">
+    <div>
+        <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="fire">
+        <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park's ecosystems. This blog provides updates about fires in Yosemite. <span>Check for current fire restrictions.</span></p>
+    </div>
+    <div>
+      <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="camper">
+      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span>park entrance fee</span> upon arrival (there's no need to pay it in advance).</p>
     </div>
   </section>
-<div class="middle">
-  <p>
-    Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the
-    persistence of life, and the tranquility of the High Sierra.
-    <br><br>
-    First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square
-    miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.
-  </p>
-</div>
-<section class="middle-two">
-<div>
-  <img class="clipart" src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire clipart">
-  <p>
-  Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s
-  ecosystems. This blog provides updates about fires in Yosemite. Check for <span class="bold">current fire restrictions</span>.
-  </p>
-</div>
-  <div>
-  <img class="clipart" src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="camper">
-  <p>
-  We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span class="bold">park entrance
-    fee</span> upon arrival (there's no need to pay it in advance).
-  </p>
-</div>
-</section>
-
-<footer class="footer">
-  <img class="half"src="assets/footer_img.jpg" alt="halfdome">
-
-  </div>
-  <nav>
-    <a class="orange" href="#">Plan your<br>Visit</a>
-    <a class="blue" href="#">Learn about<br>the Park</a>
-    <a class="yellow" href="#">Get<br>Involved</a>
-  </nav>
-</footer>
- 
+  <section class="bg-img">
+    <!-- empty section with background image. -->
+  </section>
+  <footer>
+    <p>how are we doing</p>
+    <nav>
+      <a class="orange" href="#">Plan your<br>Visit</a>
+      <a class="blue" href="#">Learn about<br>the Park</a>
+      <a class="yellow" href="#">Get<br>Involved</a>
+    </nav>
+  </footer>
 </body>
-
 </html>
